--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Admin Dashboard</title>
+    <title>Dashboard</title>
 </head>
 <body>
+    <div class="container">
+        <div class="header"></div>
+        <div class="sidebar"></div>
+        <div class="main"></div>
+    </div>
     
 </body>
 </html>
