Add sidebar elements

--- a/index.html
+++ b/index.html
@@ -11,7 +11,26 @@
 <body>
     <div class="container">
         <div class="header">header</div>
-        <div class="sidebar">sidebar</div>
+        <div class="sidebar">
+            <div class="title">Dashboard</div>
+            <div class="socialmedia">
+                <ul>
+                    <li class="item1">Home</li>
+                    <li class="item1">Profile</li>
+                    <li class="item1">Messages</li>
+                    <li class="item1">History</li>
+                    <li class="item1">Tasks</li>
+                    <li class="item1">Communities</li>
+                </ul>
+            </div>
+            <div class="settings">
+                <ul>
+                    <li class="item2">Settings</li>
+                    <li class="item2">Support</li>
+                    <li class="item2">Privacy</li>
+                </ul>
+            </div>
+        </div>
         <div class="main">main</div>
     </div>
     
