Position sidebar elements

--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
         <div class="header">header</div>
         <div class="sidebar">
             <div class="title">Dashboard</div>
-            <div class="socialmedia">
-                <ul>
-                    <li class="item1">Home</li>
-                    <li class="item1">Profile</li>
-                    <li class="item1">Messages</li>
-                    <li class="item1">History</li>
-                    <li class="item1">Tasks</li>
-                    <li class="item1">Communities</li>
-                    <li class="item1">Settings</li>
-                    <li class="item1">Support</li>
-                    <li class="item1">Privacy</li>
-                </ul>
-            </div>
+            <ul class="sidebar socialmedia">
+                <li class="item1">Home</li>
+                <li class="item1">Profile</li>
+                <li class="item1">Messages</li>
+                <li class="item1">History</li>
+                <li class="item1">Tasks</li>
+                <li class="item1">Communities</li>
+            </ul>
+            <ul class="sidebar settings">
+                <li class="item2">Settings</li>
+                <li class="item2">Support</li>
+                <li class="item2">Privacy</li>
+            </ul>
         </div>
         <div class="main">main</div>
     </div>
