Add header elements

--- a/index.html
+++ b/index.html
@@ -10,9 +10,31 @@
 </head>
 <body>
     <div class="container">
-        <div class="header">header</div>
+
+        <div class="header">
+            <div class="search-div">
+                <button>search</button>
+                <input type="search" name="search-bar" id="search-bar">
+            </div>
+            <img src="" alt="notification-icon">
+            <div id="user-header">
+                Wulff Julian
+            </div>
+            <div id="user-header2">
+                Hi there, Wulff Julian(@Wulfis)
+            </div>
+            <div class="button-header">
+                <button id="new">New</button>
+                <button id="Upload">Upload</button>
+                <button id="Share">Share</button>
+            </div>
+        </div>
+
         <div class="sidebar">
-            <div class="title">Dashboard</div>
+            <div class="title">
+                <img src="./img/title.png" alt="Title">
+                <div>Dashboard</div>
+            </div>
             <ul class="sidebar socialmedia">
                 <li class="item1">Home</li>
                 <li class="item2">Profile</li>
@@ -27,6 +49,7 @@
                 <li class="item9">Privacy</li>
             </ul>
         </div>
+
         <div class="main">main</div>
     </div>
     
