add searchbar styling

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="header">
             <div class="search-div">
-                <button>search</button>
+                <button type="button" id="search-button"><img src="./img/magnify.png" alt="Search"></button>
                 <input type="search" name="search-bar" id="search-bar">
             </div>
             <img src="" alt="notification-icon">
@@ -50,7 +50,10 @@
             </ul>
         </div>
 
-        <div class="main">main</div>
+        <div class="main">main
+
+        </div>
+    
     </div>
     
 </body>
