add more styling to the header

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
                 <button type="button" id="search-button"><img src="./img/magnify.png" alt="Search"></button>
                 <input type="search" name="search-bar" id="search-bar">
             </div>
-            <img src="" alt="notification-icon">
-            <div id="user-header">
-                Wulff Julian
+            <div class="user-noti">
+                <button type="button" id="noti-icon"><img id="noti-icon" src="./img/bell-ring.png" alt="notification icon"></button>
+                <img id="user-pic" src="./img/profilepic.jpg" alt="user profile picture" sizes="30px"></img>
+                <div id="user-header">Wulff Julian</div>
             </div>
             <div id="user-header2">
                 Hi there, Wulff Julian(@Wulfis)
