Add more styling to header

--- a/index.html
+++ b/index.html
@@ -21,13 +21,17 @@
                 <img id="user-pic" src="./img/profilepic.jpg" alt="user profile picture" sizes="30px"></img>
                 <div id="user-header">Wulff Julian</div>
             </div>
-            <div id="user-header2">
-                Hi there, Wulff Julian(@Wulfis)
+            <div id="user-header-two">
+                <img id="user-pic-two" src="./img/profilepic.jpg" alt="User profile picture">
+                <div class="greet">
+                    <p>Hi there,</p>
+                    <h3>Wulff Julian (@Wulfis)</h3>
+                </div>
             </div>
             <div class="button-header">
-                <button id="new">New</button>
-                <button id="Upload">Upload</button>
-                <button id="Share">Share</button>
+                <button type="button" id="new">New</button>
+                <button type="button" id="Upload">Upload</button>
+                <button type="button" id="Share">Share</button>
             </div>
         </div>
 
