Add small bits of main cards

--- a/index.html
+++ b/index.html
@@ -52,11 +52,29 @@
                 <li class="item7">Settings</li>
                 <li class="item8">Support</li>
                 <li class="item9">Privacy</li>
+                <li class="item10">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <object class="icon-item10" type="image/svg+xml" data="./img/ab-testing.svg"></object>
+                        Test
+                    </a>
+                </li>
             </ul>
         </div>
 
-        <div class="main">main
-
+        <div class="main">
+            <h2 class="text-project">Your Projects</h2>
+            <h2 class="text-announce">Announcements</h2>
+            <h2 class="text-trend">Trending</h2>
+            <div class="project-cards">
+                <div class="cards one"></div>
+                <div class="cards two"></div>
+                <div class="cards three"></div>
+                <div class="cards four"></div>
+                <div class="cards five"></div>
+                <div class="cards six"></div>
+            </div>
+            <div class="announces-card"></div>
+            <div class="trending-card"></div>
         </div>
     
     </div>
