add cards and trending styling and position

--- a/index.html
+++ b/index.html
@@ -63,8 +63,6 @@
 
         <div class="main">
             <h2 class="text-project">Your Projects</h2>
-            <h2 class="text-announce">Announcements</h2>
-            <h2 class="text-trend">Trending</h2>
             <div class="project-cards">
                 <div class="cards one"></div>
                 <div class="cards two"></div>
@@ -73,8 +71,14 @@
                 <div class="cards five"></div>
                 <div class="cards six"></div>
             </div>
-            <div class="announces-card"></div>
-            <div class="trending-card"></div>
+            <div class="side one">
+                <h2 class="text-announce">Announcements</h2>
+                <div class="announces-card"></div>
+            </div>
+            <div class="side two">
+                <h2 class="text-trend">Trending</h2>
+                <div class="trending-card"></div>
+            </div>    
         </div>
     
     </div>
