more layout fix for responsive shit

--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
                 <div class="cards five"></div>
                 <div class="cards six"></div>
             </div>
-            <div class="side one">
-                <h2 class="text-announce">Announcements</h2>
-                <div class="announces-card"></div>
-            </div>
-            <div class="side two">
-                <h2 class="text-trend">Trending</h2>
-                <div class="trending-card"></div>
+            <div class="sides">
+                <div class="side one">
+                    <h2 class="text-announce">Announcements</h2>
+                    <div class="announces-card"></div>
+                </div>
+                <div class="side two">
+                    <h2 class="text-trend">Trending</h2>
+                    <div class="trending-card"></div>
+                </div>
             </div>    
         </div>
     
