more fixes for layout

--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
         <div class="sidebar">
             <div class="title">
                 <img src="./img/title.png" alt="Title">
-                <div>Dashboard</div>
+                <p>Dashboard<p>
             </div>
             <ul class="sidebar socialmedia">
-                <li class="item1">Home</li>
-                <li class="item2">Profile</li>
-                <li class="item3">Messages</li>
-                <li class="item4">History</li>
-                <li class="item5">Tasks</li>
-                <li class="item6">Communities</li>
+                <li class="item1"><p>Home</p></li>
+                <li class="item2"><p>Profile</p></li>
+                <li class="item3"><p>Messages</p></li>
+                <li class="item4"><p>History</p></li>
+                <li class="item5"><p>Tasks</p></li>
+                <li class="item6"><p>Communities</p></li>
             </ul>
             <ul class="sidebar settings">
-                <li class="item7">Settings</li>
-                <li class="item8">Support</li>
-                <li class="item9">Privacy</li>
+                <li class="item7"><p>Settings</p></li>
+                <li class="item8"><p>Support</p></li>
+                <li class="item9"><p>Privacy</p></li>
                 <li class="item10">
                     <a href="http://" target="_blank" rel="noopener noreferrer">
                         <object class="icon-item10" type="image/svg+xml" data="./img/ab-testing.svg"></object>
@@ -73,11 +73,11 @@
             </div>
             <div class="sides">
                 <div class="side one">
-                    <h2 class="text-announce">Announcements</h2>
+                    <h2 class="text announce">Announcements</h2>
                     <div class="announces-card"></div>
                 </div>
                 <div class="side two">
-                    <h2 class="text-trend">Trending</h2>
+                    <h2 class="text trend">Trending</h2>
                     <div class="trending-card"></div>
                 </div>
             </div>    
