Change more styling for responsiveness

--- a/index.html
+++ b/index.html
@@ -23,44 +23,44 @@
                     </div>
                     <div class="profile-one">
                         <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
-                        <h4 class="fs-heading">Julian W. Wulff</h4>
+                        <h4 class="fs-heading-secondary header-disappear">Julian W. Wulff</h4>
                     </div>
                 </div>
 
                 <div class="secondary-header">
-                    <div class="greetings">
+                    <div class="greetings header-disappear">
                         <div class="img">
                             <img class="sz-pic-300" src="./img/profilepic.jpg" alt="user profile picture"></img>
                         </div>        
                         <div class="h4">
-                            <h4>Hi there,</h4>
+                            <h4 class="fs-heading-secondary">Hi there,</h4>
                         </div>
                         <div class="h2">
-                            <h2>Julian W. Wulff (@Wulfis)</h2>
+                            <h2 class="fs-heading-primary">Julian W. Wulff (@Wulfis)</h2>
                         </div>
                     </div>
                     <div class="btn-header">
-                        <button type="button" id="new">New</button>
-                        <button type="button" id="Upload">Upload</button>
-                        <button type="button" id="Share">Share</button>
+                        <button type="button" class="shared-btn" id="new">New</button>
+                        <button type="button" class="shared-btn" id="Upload">Upload</button>
+                        <button type="button" class="shared-btn" id="Share">Share</button>
                     </div>
                 </div>
             </header>
 
             <nav>
                 <ul class="primary-sidebar">
-                    <li><a href="#home" class="title-li"><img class="svg-title svg-color-200" src="./img/trash-can.svg"></img><h4 class="disappear">Dashboard</h4></a></li>
-                    <li><a class="active" href="#home"><img class="svg-icons" src="./img/home.svg"></img><h4 class="disappear">Home</h4></a></li>
-                    <li><a href="#profile"><img class="svg-icons svg-color-200" src="./img/profile.svg"></img><h4 class="disappear">Profile</h4></a></li>
-                    <li><a href="#messages"><img class="svg-icons svg-color-200" src="./img/message.svg"></img><h4 class="disappear">Messages</h4></a></li>
-                    <li><a href="#history"><img class="svg-icons svg-color-200" src="./img/history.svg"></img><h4 class="disappear">History</h4></a></li>
-                    <li><a href="#tasks"><img class="svg-icons svg-color-200" src="./img/tasks.svg"></img><h4 class="disappear">Tasks</h4></a></li>
-                    <li><a href="#communities"><img class="svg-icons svg-color-200" src="./img/community.svg"></img><h4 class="disappear">Communities</h4></a></li>
+                    <li class="first-home"><a href="#home" class="title-li"><img class="svg-title svg-color-200" src="./img/trash-can.svg"></img><h4 class="disappear fs-heading-primary">Dashboard</h4></a></li>
+                    <li><a class="active" href="#home"><img class="svg-icons" src="./img/home.svg"></img><h4 class="disappear fs-heading-secondary">Home</h4></a></li>
+                    <li><a href="#profile"><img class="svg-icons svg-color-200" src="./img/profile.svg"></img><h4 class="disappear fs-heading-secondary">Profile</h4></a></li>
+                    <li><a href="#messages"><img class="svg-icons svg-color-200" src="./img/message.svg"></img><h4 class="disappear fs-heading-secondary">Messages</h4></a></li>
+                    <li><a href="#history"><img class="svg-icons svg-color-200" src="./img/history.svg"></img><h4 class="disappear fs-heading-secondary">History</h4></a></li>
+                    <li><a href="#tasks"><img class="svg-icons svg-color-200" src="./img/tasks.svg"></img><h4 class="disappear fs-heading-secondary">Tasks</h4></a></li>
+                    <li><a href="#communities"><img class="svg-icons svg-color-200" src="./img/community.svg"></img><h4 class="disappear fs-heading-secondary">Communities</h4></a></li>
                 </ul>
                 <ul class="secondary-sidebar">
-                    <li><a href="#settings"><img class="svg-icons svg-color-200" src="./img/settings.svg"></img><h4 class="disappear">Settings</h4></a></li>
-                    <li><a href="#support"><img class="svg-icons svg-color-200" src="./img/support.svg"></img><h4 class="disappear">Support</h4></a></li>
-                    <li><a href="#privacy"><img class="svg-icons svg-color-200" src="./img/privacy.svg"></img><h4 class="disappear">Privacy</h4></a></li>
+                    <li><a href="#settings"><img class="svg-icons svg-color-200" src="./img/settings.svg"></img><h4 class="disappear fs-heading-secondary">Settings</h4></a></li>
+                    <li><a href="#support"><img class="svg-icons svg-color-200" src="./img/support.svg"></img><h4 class="disappear fs-heading-secondary">Support</h4></a></li>
+                    <li><a href="#privacy"><img class="svg-icons svg-color-200" src="./img/privacy.svg"></img><h4 class="disappear fs-heading-secondary">Privacy</h4></a></li>
                 </ul>   
             </nav>
 
