--- a/index.html
+++ b/index.html
@@ -66,114 +66,124 @@
 
             <main>
                 <div class="projects-cards">
-                    <h2>Your Projects</h2>
-                    <div class="cards">
-                        <a href="#"><h4>Super Cool Project</h4></a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Duis non dictum urna, sit amet sodales erat. 
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <ul class="link-Cards">
-                            <li><a href="#favorite"><img class="svg-icons svg-color-200" src="./img/favorite.svg" alt="favorite"></a></li>
-                            <li><a href="#whatch"><img class="svg-icons svg-color-200" src="./img/see.svg" alt="watch"></img></a></li>
-                            <li><a href="#share"><img class="svg-icons svg-color-200" src="./img/share.svg" alt="share"></img></a></li>
-                        </ul>
-                    </div>
-                    <div class="cards">
-                        <a href="#"><h4>Super Cool Project</h4></a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Duis non dictum urna, sit amet sodales erat. 
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <ul class="link-Cards">
-                            <li><a href="#favorite"><img class="svg-icons svg-color-200" src="./img/favorite.svg" alt="favorite"></a></li>
-                            <li><a href="#whatch"><img class="svg-icons svg-color-200" src="./img/see.svg" alt="watch"></img></a></li>
-                            <li><a href="#share"><img class="svg-icons svg-color-200" src="./img/share.svg" alt="share"></img></a></li>
-                        </ul>
-                    </div>
-                    <div class="cards">
-                        <a href="#"><h4>Super Cool Project</h4></a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Duis non dictum urna, sit amet sodales erat. 
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <ul class="link-Cards">
-                            <li><a href="#favorite"><img class="svg-icons svg-color-200" src="./img/favorite.svg" alt="favorite"></a></li>
-                            <li><a href="#whatch"><img class="svg-icons svg-color-200" src="./img/see.svg" alt="watch"></img></a></li>
-                            <li><a href="#share"><img class="svg-icons svg-color-200" src="./img/share.svg" alt="share"></img></a></li>
-                        </ul>
-                    </div>
-                    <div class="cards">
-                        <a href="#"><h4>Super Cool Project</h4></a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Duis non dictum urna, sit amet sodales erat. 
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <ul class="link-Cards">
-                            <li><a href="#favorite"><img class="svg-icons svg-color-200" src="./img/favorite.svg" alt="favorite"></a></li>
-                            <li><a href="#whatch"><img class="svg-icons svg-color-200" src="./img/see.svg" alt="watch"></img></a></li>
-                            <li><a href="#share"><img class="svg-icons svg-color-200" src="./img/share.svg" alt="share"></img></a></li>
-                        </ul>
-                    </div>
-                    <div class="cards">
-                        <a href="#"><h4>Super Cool Project</h4></a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Duis non dictum urna, sit amet sodales erat. 
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <ul class="link-Cards">
-                            <li><a href="#favorite"><img class="svg-icons svg-color-200" src="./img/favorite.svg" alt="favorite"></a></li>
-                            <li><a href="#whatch"><img class="svg-icons svg-color-200" src="./img/see.svg" alt="watch"></img></a></li>
-                            <li><a href="#share"><img class="svg-icons svg-color-200" src="./img/share.svg" alt="share"></img></a></li>
-                        </ul>
-                    </div>
-                    <div class="cards">
-                        <a href="#"><h4>Super Cool Project</h4></a>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Duis non dictum urna, sit amet sodales erat. 
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <ul class="link-Cards">
-                            <li><a href="#favorite"><img class="svg-icons svg-color-200" src="./img/favorite.svg" alt="favorite"></a></li>
-                            <li><a href="#whatch"><img class="svg-icons svg-color-200" src="./img/see.svg" alt="watch"></img></a></li>
-                            <li><a href="#share"><img class="svg-icons svg-color-200" src="./img/share.svg" alt="share"></img></a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="announces-card">
-                    <h2>Announcements</h2>
-                    <div class="an-cards">
-                        <h4>Site Maintenance</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Duis non dictum urna, sit amet sodales erat.</p>
-                    </div>
-                    <div class="an-cards">
-                        <h4>Community Share Day</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Duis non dictum urna, sit amet sodales erat.</p>
-                    </div>
-                    <div class="an-cards">
-                        <h4>Updated Privacy Policy</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                            Duis non dictum urna, sit amet sodales erat.</p>
-                    </div>
+                    <h2 class="cards-title cards-width">Your Projects</h2>
+                    <div class="cards-desk-one">
+                        <div class="cards">
+                            <a href="#"><h4>Super Cool Project</h4></a>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Duis non dictum urna, sit amet sodales erat. 
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <ul class="link-Cards">
+                                <li><a href="#favorite"><img class="svg-icons svg-color-200" src="./img/favorite.svg" alt="favorite"></a></li>
+                                <li><a href="#whatch"><img class="svg-icons svg-color-200" src="./img/see.svg" alt="watch"></img></a></li>
+                                <li><a href="#share"><img class="svg-icons svg-color-200" src="./img/share.svg" alt="share"></img></a></li>
+                            </ul>
+                        </div>
+                        <div class="cards">
+                            <a href="#"><h4>Super Cool Project</h4></a>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Duis non dictum urna, sit amet sodales erat. 
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <ul class="link-Cards">
+                                <li><a href="#favorite"><img class="svg-icons svg-color-200" src="./img/favorite.svg" alt="favorite"></a></li>
+                                <li><a href="#whatch"><img class="svg-icons svg-color-200" src="./img/see.svg" alt="watch"></img></a></li>
+                                <li><a href="#share"><img class="svg-icons svg-color-200" src="./img/share.svg" alt="share"></img></a></li>
+                            </ul>
+                        </div>
+                        <div class="cards">
+                            <a href="#"><h4>Super Cool Project</h4></a>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Duis non dictum urna, sit amet sodales erat. 
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <ul class="link-Cards">
+                                <li><a href="#favorite"><img class="svg-icons svg-color-200" src="./img/favorite.svg" alt="favorite"></a></li>
+                                <li><a href="#whatch"><img class="svg-icons svg-color-200" src="./img/see.svg" alt="watch"></img></a></li>
+                                <li><a href="#share"><img class="svg-icons svg-color-200" src="./img/share.svg" alt="share"></img></a></li>
+                            </ul>
+                        </div>
+                        <div class="cards">
+                            <a href="#"><h4>Super Cool Project</h4></a>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Duis non dictum urna, sit amet sodales erat. 
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <ul class="link-Cards">
+                                <li><a href="#favorite"><img class="svg-icons svg-color-200" src="./img/favorite.svg" alt="favorite"></a></li>
+                                <li><a href="#whatch"><img class="svg-icons svg-color-200" src="./img/see.svg" alt="watch"></img></a></li>
+                                <li><a href="#share"><img class="svg-icons svg-color-200" src="./img/share.svg" alt="share"></img></a></li>
+                            </ul>
+                        </div>
+                        <div class="cards">
+                            <a href="#"><h4>Super Cool Project</h4></a>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Duis non dictum urna, sit amet sodales erat. 
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <ul class="link-Cards">
+                                <li><a href="#favorite"><img class="svg-icons svg-color-200" src="./img/favorite.svg" alt="favorite"></a></li>
+                                <li><a href="#whatch"><img class="svg-icons svg-color-200" src="./img/see.svg" alt="watch"></img></a></li>
+                                <li><a href="#share"><img class="svg-icons svg-color-200" src="./img/share.svg" alt="share"></img></a></li>
+                            </ul>
+                        </div>
+                        <div class="cards">
+                            <a href="#"><h4>Super Cool Project</h4></a>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                Duis non dictum urna, sit amet sodales erat. 
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <ul class="link-Cards">
+                                <li><a href="#favorite"><img class="svg-icons svg-color-200" src="./img/favorite.svg" alt="favorite"></a></li>
+                                <li><a href="#whatch"><img class="svg-icons svg-color-200" src="./img/see.svg" alt="watch"></img></a></li>
+                                <li><a href="#share"><img class="svg-icons svg-color-200" src="./img/share.svg" alt="share"></img></a></li>
+                            </ul>
+                        </div>
+                    </div>    
                 </div>
 
-                <div class="trending-card">
-                    <h2>Trending</h2>
-                    <div class="tren-cards">
-                        <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
-                        <h5 class="fs-heading">@Wulfis</h5>
-                        <p>Mysterious man</p>
+                <div class="sidecards">
+                    <div class="announces-card">
+                        <div class="anoncards">
+                        <h2 class="cards-title">Announcements</h2>
+                            <div class="an-cards">
+                                <h4>Site Maintenance</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                    Duis non dictum urna, sit amet sodales erat.</p>
+                            </div>
+                            <div class="an-cards">
+                                <h4>Community Share Day</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                    Duis non dictum urna, sit amet sodales erat.</p>
+                            </div>
+                            <div class="an-cards">
+                                <h4>Updated Privacy Policy</h4>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                    Duis non dictum urna, sit amet sodales erat.</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="tren-cards">
-                        <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
-                        <h5 class="fs-heading">@Wulfis</h5>
-                        <p>Mysterious man</p>
-                    </div>
-                    <div class="tren-cards">
-                        <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
-                        <h5 class="fs-heading">@Wulfis</h5>
-                        <p>Mysterious man</p>
-                    </div>
-                    <div class="tren-cards">
-                        <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
-                        <h5 class="fs-heading">@Wulfis</h5>
-                        <p>Mysterious man</p>
+
+                    <div class="trending-card">
+                        <div class="anoncards">
+                        <h2 class="cards-title">Trending</h2>
+                        
+                            <div class="tren-cards">
+                                <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
+                                <h5 class="fs-heading">@Wulfis</h5>
+                                <p>Mysterious man</p>
+                            </div>
+                            <div class="tren-cards">
+                                <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
+                                <h5 class="fs-heading">@Wulfis</h5>
+                                <p>Mysterious man</p>
+                            </div>
+                            <div class="tren-cards">
+                                <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
+                                <h5 class="fs-heading">@Wulfis</h5>
+                                <p>Mysterious man</p>
+                            </div>
+                            <div class="tren-cards">
+                                <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
+                                <h5 class="fs-heading">@Wulfis</h5>
+                                <p>Mysterious man</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </main>
