--- a/index.html
+++ b/index.html
@@ -141,20 +141,22 @@
                     <div class="announces-card">
                         <div class="anoncards">
                         <h2 class="cards-title">Announcements</h2>
-                            <div class="an-cards">
-                                <h4>Site Maintenance</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                    Duis non dictum urna, sit amet sodales erat.</p>
-                            </div>
-                            <div class="an-cards">
-                                <h4>Community Share Day</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                    Duis non dictum urna, sit amet sodales erat.</p>
-                            </div>
-                            <div class="an-cards">
-                                <h4>Updated Privacy Policy</h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                                    Duis non dictum urna, sit amet sodales erat.</p>
+                            <div class="TA-cards">
+                                <div class="an-cards">
+                                    <h4>Site Maintenance</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                        Duis non dictum urna, sit amet sodales erat.</p>
+                                </div>
+                                <div class="an-cards">
+                                    <h4>Community Share Day</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                        Duis non dictum urna, sit amet sodales erat.</p>
+                                </div>
+                                <div class="an-cards">
+                                    <h4>Updated Privacy Policy</h4>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                                        Duis non dictum urna, sit amet sodales erat.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
