trending&announce card styling

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                     <div class="announces-card">
                         <div class="anoncards">
                         <h2 class="cards-title">Announcements</h2>
-                            <div class="TA-cards">
+                            <div class="A-cards">
                                 <div class="an-cards">
                                     <h4>Site Maintenance</h4>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
@@ -163,27 +163,36 @@
 
                     <div class="trending-card">
                         <div class="anoncards">
-                        <h2 class="cards-title">Trending</h2>
-                        
-                            <div class="tren-cards">
-                                <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
-                                <h5 class="fs-heading">@Wulfis</h5>
-                                <p>Mysterious man</p>
-                            </div>
-                            <div class="tren-cards">
-                                <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
-                                <h5 class="fs-heading">@Wulfis</h5>
-                                <p>Mysterious man</p>
-                            </div>
-                            <div class="tren-cards">
-                                <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
-                                <h5 class="fs-heading">@Wulfis</h5>
-                                <p>Mysterious man</p>
-                            </div>
-                            <div class="tren-cards">
-                                <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
-                                <h5 class="fs-heading">@Wulfis</h5>
-                                <p>Mysterious man</p>
+                            <h2 class="cards-title">Trending</h2>
+                            <div class="T-cards">
+                                <div class="tren-cards">
+                                    <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
+                                    <div>
+                                        <h5 class="fs-heading">@Wulfis</h5>
+                                        <p>Mysterious man</p>
+                                    </div>
+                                </div>
+                                <div class="tren-cards">
+                                    <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
+                                    <div>
+                                        <h5 class="fs-heading">@Wulfis</h5>
+                                        <p>Mysterious man</p>
+                                    </div>
+                                </div>
+                                <div class="tren-cards">
+                                    <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
+                                    <div>
+                                        <h5 class="fs-heading">@Wulfis</h5>
+                                        <p>Mysterious man</p>
+                                    </div>
+                                </div>
+                                <div class="tren-cards">
+                                    <img class="sz-pic-100" src="./img/profilepic.jpg" alt="user profile picture"></img>
+                                    <div>
+                                        <h5 class="fs-heading">@Wulfis</h5>
+                                        <p>Mysterious man</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
